test/functions/vass/unresolved-call.good
unresolved-call.chpl:4: error: unresolved call 'unresolvd(int(64))'
