test/functions/vass/unresolved-call.chpl
// unresolved call

var i: int;
unresolvd(i);
